[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unredact"
dynamic = ["version"]
description = "Program and library to remove weak redactions from PDF files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pikepdf"
]

[project.scripts]
unredact = "unredact.__main__:main"

[tool.setuptools_scm]
version_file = "src/unredact/_version.py"

[tool.black]
line-length = 80

[tool.ruff]
fix=true
line-length = 80
target-version = "py311"
select = ["D"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.pydocstyle]
convention = "numpy"
