[metadata]
name = unredact
version = 0.1.0
description = This repo contains a script that removes weak redactions from PDFs.
author = Kyle Dent
author_email = kdent@seaglass.com
license = MIT
readme = README.md
requires-python = >=3.8
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Other/Nonlisted Topic
    Topic :: Utilities
project_urls =
    Bug Tracker =https://github.com/kdent/unredact/issues

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
packages = unredact
setup_requires =
    setuptools >=46.4.0
install_requires =
    pdfminer==20191125
    pillow==10.0.0
    reportlab==4.0.4
    black==23.7.0
    ruff==0.0.282
    isort==5.12.0

[isort]
profile=black
line_length=80
skip = [.gitignore, project/data/]
